--- a/usuarios/templates/usuarios/login.html
+++ b/usuarios/templates/usuarios/login.html
@@ -1,11 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE-Edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Login</title>
 </head>
 <body>
     
+    <div class="container">
+        <form action = "{% url 'login' %}" method="post">
+            {% csrf_token %}
+            <div class="input-email">
+                <label for="useremail">Email:</label>
+                <input type="email" id="useremail" name="email" required>
+            </div>
+            <div class="input-password">
+                <label for="userpassword">Senha:</label>
+                <input type="password" id="userpassword" name="senha" required>
+            </div>
+            <div class="login-button">
+                <button class="login-b" type="submit">Login</button>
+            </div>
+        </form>
+    </div>
+
 </body>
 </html>
