--- a/usuarios/templates/usuarios/cadastro.html
+++ b/usuarios/templates/usuarios/cadastro.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -5,27 +6,37 @@
     <meta http-equiv = "X-UA-Compatible" content = "IE-edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro de usuários</title>
+    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
 </head>
 <body>
     <div class="container">
-        <form action="{% url 'cadastro' %}" method="post">
-            {% csrf_token %}
-            <div class="input-name">
-                <label for="username">Nome Completo:</label>
-                <input type="text" id="username" name="nome" required>
+        <div class="row">
+            <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
+              <div class="card border-0 shadow rounded-3 my-5">
+                <div class="card-body p-4 p-sm-5">
+                  <h5 class="card-title text-center mb-5 fw-light fs-5">Cadastro de Usuários</h5>
+                    <form action="{% url 'cadastro' %}" method="post">
+                        {% csrf_token %}
+                        <div class="form-floating mb-3">
+                            <input type="text" class="form-control" id="floatingInput" placeholder="name@example.com" name="nome" required>
+                            <label for="floatingInput">Nome Completo:</label>
+                        </div>
+                        <div class="form-floating mb-3">
+                            <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com" name="email" required>
+                            <label for="floatingInput">E-mail:</label>
+                        </div>
+                        <div class="form-floating mb-3">
+                            <input type="password" class="form-control" id="floatingInput" placeholder="name@example.com" name="senha" required>
+                            <label for="floatingInput">Senha:</label>
+                        </div>
+                        <div class="d-grid">
+                            <button class="btn btn-primary btn-login text-uppercase fw-bold" type="submit">Cadastrar</button>
+                        </div>
+                        <hr class="my-4">
+                    </form>
+                </div>
             </div>
-            <div class="input-email">
-                <label for="useremail">E-mail:</label>
-                <input type="email" id="useremail" name="email" required>
-            </div>
-            <div class="input-password">
-                <label for="userpassword">Senha:</label>
-                <input type="password" id="userpassword" name="senha" required>
-            </div>
-            <div class="register-button">
-                <button class="register-b" type="submit">Cadastrar</button>
-            </div>
-        </form>
+        </div>
     </div>
 </body>
 </html>
