--- a/usuarios/templates/usuarios/login.html
+++ b/usuarios/templates/usuarios/login.html
@@ -44,3 +44,55 @@
       </div>
 </body>
 </html>
+
+
+<style>
+  body {
+    background-color: #565d64;
+    font-family: Arial, sans-serif;
+}
+
+.card {
+    border-radius: 1rem;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.card-title {
+    color: #333;
+    font-weight: bold;
+    font-size: 1.5rem;
+}
+
+.form-floating label {
+    color: #6c757d;
+}
+
+.form-control {
+    border-radius: 0.5rem;
+    padding: 1.5rem;
+    font-size: 1rem;
+}
+
+.form-check-input {
+    margin-top: 0.3rem;
+}
+
+.btn-login {
+    background-color: #007bff;
+    border: none;
+    padding: 0.75rem;
+    font-size: 1rem;
+    border-radius: 0.5rem;
+}
+
+.btn-login:hover {
+    background-color: #0056b3;
+}
+
+@media (min-width: 576px) {
+    .card {
+        margin: 2rem 0;
+    }
+}
+
+</style>
