--- a/usuarios/templates/usuarios/base.html
+++ b/usuarios/templates/usuarios/base.html
@@ -18,7 +18,7 @@
                     <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'home' %}">Página Inicial</a></li>
                     <li class="nav-item"><a class="nav-link" href="#!">Sobre</a></li>
                     <li class="nav-item"><a class="nav-link" href="#!">Contato</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#!">Logout</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{% url 'logout' %}">Logout</a></li>
                 </ul>
             </div>
         </div>
