--- a/usuarios/templates/usuarios/visualizar.html
+++ b/usuarios/templates/usuarios/visualizar.html
@@ -4,4 +4,23 @@
 
 {% block titulo %}Visualizar Notas{% endblock %}
 
-{% block conteudo %}Aqui dentro vai o conteudo...{% endblock %}
+{% block conteudo %}
+
+<h3>Visualização de Notas Registradas</h3>
+<hr>
+
+<form action="{% url 'visualizar' %}" method="POST">
+    {% csrf_token %}
+    <div class="filter" >
+        <label for="disciplinaName">Filtrar por Disciplina:</label>
+        <select name="disciplina" id="">
+            <option value="">Todas as disciplinas</option>
+            {% for campo in lista_notas %}
+                <option value="">{{ campo.disciplina }}</option>
+            {% endfor %}
+        </select>
+        <button type="submit" class="btn btn-primary" >Filtrar</button>
+    </div>
+</form>
+
+{% endblock %}
